trying to fix horizontal scroll issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -84,7 +84,7 @@ Version: 1.0
 body
 --------------------------------------------- 
 */
-html {
+html, body {
     overflow-x: hidden;
 }
 body {
